[package]
name = "tilecut"
version = "0.1.0"
edition = "2024"

[features]
default = []
vips = []

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive", "wrap_help"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
